--- a/src/renderer/assets/scss/settings/_colors.scss
+++ b/src/renderer/assets/scss/settings/_colors.scss
@@ -5,4 +5,5 @@ $line-shadow: hsl(340, 86%, 3%);
 $font: hsl(0, 0%, 100%);
 $border: rgba(white, 0.15);
 $highlight: rgba(white, 0.05);
+$highlight-strong: rgba(white, 0.25);
 $cursor: hsl(50, 100%, 50%);
